@@ -5,10 +5,6 @@
 <device id="appleMonitorIII" label="Apple Monitor III" image="images/Apple/Apple Monitor III.png" group="peripherals">
     <setting ref="appleMonitorIII.monitor" name="videoBrightness" label="Brightness" type="slider" options="-1.0,1.0"/>
     <setting ref="appleMonitorIII.monitor" name="videoContrast" label="Contrast" type="slider" options="0.0,2.0,1.0"/>
-    <setting ref="appleMonitorIII.monitor" name="videoSaturation" label="Saturation" type="slider" options="0.0,2.0,1.0"/>
-    <setting ref="appleMonitorIII.monitor" name="videoHue" label="Hue" type="slider" options="-0.5,0.5,0.0"/>
-    <setting ref="appleMonitorIII.monitor" name="videoHorizontalCenter" label="Horizontal Center" type="slider" options="-0.1,0.1"/>
-    <setting ref="appleMonitorIII.monitor" name="videoHorizontalSize" label="Horizontal Size" type="slider" options="0.9,1.3"/>
     <setting ref="appleMonitorIII.monitor" name="videoVerticalCenter" label="Vertical Center" type="slider" options="-0.1,0.1"/>
     <setting ref="appleMonitorIII.monitor" name="videoVerticalSize" label="Vertical Size" type="slider" options="0.9,1.3"/>
 </device>
