@@ -1,4 +1,5 @@
 ==2011-06==
+* Implemented OEEmulation removeDevice
 * Implemented delete device through Edit>Delete, or CMD+BACKSPACE
 * Fixed recursive lock problem when adding a canvas
 * Implemented connection of main inlets
